<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name">Tic Tac Toe</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>

    <string name="exit">exit_click</string>

    <string name="about">about_click</string>

    <string name="normal">normal_click</string>

    <string name="ultimate">ultimate_click</string>

    <string name="normalText">Normal mode</string>

    <string name="ultimateText">Ultimate mode</string>

    <string name="aboutText">About</string>

    <string name="exitText">Exit</string>

    <string name="title_activity_about">About</string>

    <string name="about_activity_label">Tic Tac Toe - About</string>

    <string name="normal_activity_label">Tic Tac Toe - Normal Mode</string>

    <string name="aboutInformation">Welcome to the Tic Tac Toe game! The current version of game consists only of one mode - Normal mode which represents a classic version of the game. In the next versions some new features will be added. </string>

    <string name="developerInfo">Developed by Zabolotnii Pavel. 2014. All right reserved </string>

    <string name="title_activity_normal">NormalActivity</string>

    <string name="x_move">X Move</string>

    <string name="o_move">O Move</string>

    <string name="empty"/>

    <string name="X">X</string>

    <string name="O">O</string>

    <string name="makeMove">makeMove</string>

</resources>