<?xml version="1.0"?>
<RelativeLayout tools:context=".About"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:label="@string/about_activity_label"
    android:background="@color/background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aboutInformation"
        android:layout_marginTop="25dp"
        android:id="@+id/textView2"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/developerInfo"
        android:layout_marginTop="55dp"
        android:id="@+id/moveTextView"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"/>

</RelativeLayout>